<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/dimen_250"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_reply"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_1"
        android:background="@drawable/tuoyuan_top_bg"
        android:gravity="center"
        android:text="@string/reply"
        android:textColor="@color/black_second"
        android:textSize="@dimen/text_size_16" />


    <TextView
        android:id="@+id/tv_copy"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_1"
        android:background="@drawable/base_click_bg_white"
        android:gravity="center"
        android:padding="@dimen/padding_little_5"
        android:text="@string/copy"
        android:textColor="@color/black_second"
        android:textSize="@dimen/text_size_16" />


    <TextView
        android:id="@+id/tv_delete"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_marginTop="@dimen/dimen_1"
        android:background="@drawable/tuoyuan_bottom_bg"
        android:gravity="center"
        android:padding="@dimen/padding_little_5"
        android:text="@string/delete"
        android:textColor="@color/black_second"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginTop="@dimen/margin_little_6"
        android:background="@drawable/tuoyuan_bg"
        android:gravity="center"
        android:padding="@dimen/padding_little_5"
        android:text="@string/cancel"
        android:textColor="@color/base_color"
        android:textSize="@dimen/text_size_16" />


</LinearLayout>